# HashMyFiles

./: Cargo.toml  LICENSE  README.md  gitignore
.github/workflows/: build.yml
debian/: changelog  control  debhelper-build-stamp  files  hashmyfiles.substvars  postinst  rules
debian/cargo_home/: .global-cache
debian/cargo_home/registry/cache/index.crates.io-1949cf8c6b5b557f/: blake3-1.8.4.crate  gdk-pixbuf-0.19.8.crate  gdk-pixbuf-sys-0.19.8.crate  gdk4-0.8.2.crate  gdk4-sys-0.8.2.crate  gio-0.19.8.crate  gio-sys-0.19.8.crate  glib-0.19.9.crate  glib-macros-0.19.9.crate  glib-sys-0.19.8.crate  gobject-sys-0.19.8.crate  graphene-rs-0.19.8.crate  graphene-sys-0.19.8.crate  gsk4-0.8.2.crate  gsk4-sys-0.8.2.crate  gtk4-macros-0.8.2.crate  gtk4-sys-0.8.2.crate  pango-0.19.8.crate  pango-sys-0.19.8.crate
debian/cargo_home/registry/cache/index.crates.io-6f17d22bba15001f/: cairo-rs-0.19.4.crate
debian/cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/bl/ak/: blake3
debian/cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/gd/k4/: gdk4-sys
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/blake3-1.8.4/: .cargo_vcs_info.json  Cargo.toml
debian/hashmyfiles/DEBIAN/: control  md5sums
debian/hashmyfiles/usr/share/applications/: hashmyfiles.desktop
debian/templates/: control.template  hashmyfiles.spec.template
resources/: hashmyfiles.desktop  style.css
src/: app.rs  database.rs  hasher.rs  main.rs  scanner.rs  utils.rs  verifier.rs
src/ui/: create_tab.rs  diff_viewer.rs  mod.rs  verify_tab.rs  window.rs
(+11 files in other folders)
