[package]
name = "hashmyfiles"
version = "1.0.0"
edition = "2021"
description = "A professional file integrity scanner and verifier"
authors = ["HashMyFiles Contributors"]
license = "MIT"

[[bin]]
name = "hashmyfiles"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.8", features = ["v4_10"] }
libadwaita = { version = "0.6", features = ["v1_4"] }
glib = "0.19"
gio = "0.19"
rayon = "1.8"
walkdir = "2"
sha2 = "0.10"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
once_cell = "1.19"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
